# cardex

./: .containerignore  .gitignore  .library-workflow.toml.example  .opencodeignore  AGENTS.md  CHANGELOG.md  Containerfile  README.md  README.zh-TW.md  config.toml.example  docker-compose.yml  opencode.json  podman.sh  pyproject.toml
.opencode/: INSTALL.md
.template/: CHANGELOG.md
.template/docs/: DOCUMENTATION_GUIDELINES.md  POST_INSTALL_CLEANUP.md  PRD_GUIDE.md  README_BILINGUAL_FORMAT.md
.template/docs/adr/: 0006-template-directory-isolation.md
.template/hooks/: pre-push
.template/scripts/: bump-version.sh  check-version-sync.sh  detect-os.sh  health-check.sh  post-install-cleanup.sh  start-opencode.sh
cardex/: __init__.py  app.py  catalog_assistant.py  catalog_loader.py  catalog_room.py  cataloging.py  cli.py  config.py  database.py  doi_resolver.py  metadata_extractor.py  naming_strategy.py  paradigm.py  scanner.py  ui_common.py  workflow.py
cardex/pages/: 1_🎼_Paradigm_Analysis.py  2_🎭_Concerto_Synthesis.py
catalogs/: by_venue.catalog.yaml  by_year.catalog.yaml  example.catalog.yaml  flat.catalog.yaml
concerti/: conference_presentation.concerto  example.concerto  policy_brief.concerto
docs/: OPENCODE_STABILITY.md  OPENCODE_WORKFLOW_CHECKLIST.md  PRD.md  container-deployment.md  data-model.md  gui-paradigm-specification.md  phase-0-quickstart.md  phase-0-service-foundation.md  phase-0-technical-decisions.md  technology-stack.md
i18n/locales/en-US/: app.toml
i18n/locales/zh-TW/: app.toml
paradigms/: example.paradigm  ihl_data_privacy.paradigm.example
tests/: test_quick_buttons.py  test_quick_buttons_simple.py
workflows/: README.md  advanced.toml  default.toml  simple.toml
